Arreglar árbol sintáctico